--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><label><input type="radio" name="radioInput" value="chill-out"id="">Chill Out</label></li>
                 
             </ul>
-            <button id="btnPick" type="submit">Pick me a Song</button>
+            <button id="btnPick" type="submit">Pick me a song</button>
         </div>
 
         <div id="outPut">
