--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
     <footer>
-        <h2>Powered by Luis Vieira</h2>
+        <h2>Powered by Luis Ernani</h2>
         <a target="_blank" href="https://github.com/luisernani"><i class="devicon-github-original-wordmark"></i></a>
         <a target="_blank" href="https://www.linkedin.com/in/luis-ernani-533ab09a/"><i class="devicon-linkedin-plain"></i></a>
     </footer>
